Update base path for data source in notebook

--- a/1_codes/consolidated_pipeline/2_dimension_data_processing/1_customer_data_processing.ipynb
+++ b/1_codes/consolidated_pipeline/2_dimension_data_processing/1_customer_data_processing.ipynb
@@ -109,7 +109,7 @@
     "catalog = dbutils.widgets.get(\"catalog\")\n",
     "data_source = dbutils.widgets.get(\"data_source\")\n",
     "\n",
-    "base_path = f's3://sportsbar-dp-vn/{data_source}/*.csv'\n",
+    "base_path = f's3://x/{data_source}/*.csv'\n",
     "print(base_path)"
    ]
   },
