Update base_path for data source in notebook

--- a/1_codes/consolidated_pipeline/3_fact_data_processing/2_incremental_load_fact.ipynb
+++ b/1_codes/consolidated_pipeline/3_fact_data_processing/2_incremental_load_fact.ipynb
@@ -126,7 +126,7 @@
     "catalog = dbutils.widgets.get(\"catalog\")\n",
     "data_source = dbutils.widgets.get(\"data_source\")\n",
     "\n",
-    "base_path = f's3://sportsbar-dp-vn/{data_source}'\n",
+    "base_path = f's3://x/{data_source}'\n",
     "landing_path = f\"{base_path}/landing/\"\n",
     "processed_path = f\"{base_path}/processed/\"\n",
     "print(\"Base Path: \", base_path)\n",
